--- a/kibot_yaml/kibot_main.yaml
+++ b/kibot_yaml/kibot_main.yaml
@@ -557,14 +557,14 @@ definitions:
 
   # Metadata ===================================================================
 
-  PROJECT_NAME: Project Name
-  BOARD_NAME: Board Name
+  PROJECT_NAME: OpenTamagochi
+  BOARD_NAME: Mandarinfish
 
   COMPANY: Company Name
-  DESIGNER: Author
+  DESIGNER: Enrique Ramirez
 
   LOGO: 'Logos/dummy_logo.png'
-  GIT_URL: 'https://github.com/nguyen-v/KDT_Hierarchical_KiBot'
+  GIT_URL: 'https://github.com/EnriqueERamirez/OpenTamagochiHardware'
 
   # Preflight ==================================================================
 
